# novel-engine

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: bilibili-video-script.md  prompt-preview-example.md
prompts/: base.yaml
prompts/genres/: 悬疑.yaml  玄幻.yaml  都市.yaml
prompts/styles/: 对话驱动.yaml  紧凑.yaml  细腻.yaml
scripts/: clean_reader_text.py  enrich_crossrefs.py  enrich_profiles.py  enrich_profiles_secondary.py
src/: auto_profile.py  auto_suggest.py  chapter_facts.py  cli.py  conflict_detector.py  context_assembler.py  context_blocks.py  dispatcher.py  extractor.py  healthcheck.py  importer.py  llm.py  lorebook.py  merger.py  profiles.py  profiles_cli.py  prompts.py  provider.py  quality_check.py  schemas.py  state.py  templates.py  token_budget.py  vector_store.py  worker.py
src/providers/: anthropic.py  openai_compat.py
tests/: conftest.py  test_profiles.py  test_prompts.py  test_state.py  test_worker.py
