[project]
name = "novel-engine"
version = "0.2.0"
description = "LLM-powered Chinese long-form novel generation engine with context management"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "tenacity>=8.2,<9.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
tokens = ["tiktoken>=0.7"]
vector = ["chromadb>=0.5.0,<1.0"]
anthropic = ["anthropic>=0.30"]
templates = ["pyyaml>=6.0"]
all = ["novel-engine[dev,tokens,vector,anthropic,templates]"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
